@@ -1,7 +1,6 @@
 package dev.dsf.fhir.dao.jdbc;
 
-import java.util.Arrays;
-import java.util.Collections;
+import java.util.List;
 
 import javax.sql.DataSource;
 
@@ -11,15 +10,18 @@ import ca.uhn.fhir.context.FhirContext;
 import dev.dsf.fhir.dao.LocationDao;
 import dev.dsf.fhir.search.filter.LocationIdentityFilter;
 import dev.dsf.fhir.search.parameters.LocationIdentifier;
+import dev.dsf.fhir.search.parameters.LocationName;
 
 public class LocationDaoJdbc extends AbstractResourceDaoJdbc<Location> implements LocationDao
 {
 	public LocationDaoJdbc(DataSource dataSource, DataSource permanentDeleteDataSource, FhirContext fhirContext)
 	{
 		super(dataSource, permanentDeleteDataSource, fhirContext, Location.class, "locations", "location",
-				"location_id", LocationIdentityFilter::new, Arrays.asList(factory(LocationIdentifier.PARAMETER_NAME,
-						LocationIdentifier::new, LocationIdentifier.getNameModifiers())),
-				Collections.emptyList());
+				"location_id", LocationIdentityFilter::new,
+				List.of(factory(LocationIdentifier.PARAMETER_NAME, LocationIdentifier::new,
+						LocationIdentifier.getNameModifiers()),
+						factory(LocationName.PARAMETER_NAME, LocationName::new, LocationName.getNameModifiers())),
+				List.of());
 	}
 
 	@Override
