@@ -2,8 +2,7 @@ package dev.dsf.fhir.dao.jdbc;
 
 import java.sql.Connection;
 import java.sql.SQLException;
-import java.util.Arrays;
-import java.util.Collections;
+import java.util.List;
 import java.util.Optional;
 
 import javax.sql.DataSource;
@@ -16,6 +15,7 @@ import dev.dsf.fhir.search.filter.MeasureIdentityFilter;
 import dev.dsf.fhir.search.parameters.MeasureDate;
 import dev.dsf.fhir.search.parameters.MeasureDependsOn;
 import dev.dsf.fhir.search.parameters.MeasureIdentifier;
+import dev.dsf.fhir.search.parameters.MeasureName;
 import dev.dsf.fhir.search.parameters.MeasureStatus;
 import dev.dsf.fhir.search.parameters.MeasureUrl;
 import dev.dsf.fhir.search.parameters.MeasureVersion;
@@ -28,16 +28,17 @@ public class MeasureDaoJdbc extends AbstractResourceDaoJdbc<Measure> implements 
 	{
 		super(dataSource, permanentDeleteDataSource, fhirContext, Measure.class, "measures", "measure", "measure_id",
 				MeasureIdentityFilter::new,
-				Arrays.asList(factory(MeasureDate.PARAMETER_NAME, MeasureDate::new),
+				List.of(factory(MeasureDate.PARAMETER_NAME, MeasureDate::new),
 						factory(MeasureDependsOn.PARAMETER_NAME, MeasureDependsOn::new,
 								MeasureDependsOn.getNameModifiers(), MeasureDependsOn::new,
 								MeasureDependsOn.getIncludeParameterValues()),
 						factory(MeasureIdentifier.PARAMETER_NAME, MeasureIdentifier::new,
 								MeasureIdentifier.getNameModifiers()),
+						factory(MeasureName.PARAMETER_NAME, MeasureName::new, MeasureName.getNameModifiers()),
 						factory(MeasureStatus.PARAMETER_NAME, MeasureStatus::new, MeasureStatus.getNameModifiers()),
 						factory(MeasureUrl.PARAMETER_NAME, MeasureUrl::new, MeasureUrl.getNameModifiers()),
 						factory(MeasureVersion.PARAMETER_NAME, MeasureVersion::new, MeasureVersion.getNameModifiers())),
-				Collections.emptyList());
+				List.of());
 
 		readByUrl = new ReadByUrlDaoJdbc<>(this::getDataSource, this::getResource, getResourceTable(),
 				getResourceColumn());
