@@ -1,7 +1,6 @@
 package dev.dsf.fhir.dao.jdbc;
 
-import java.util.Arrays;
-import java.util.Collections;
+import java.util.List;
 
 import javax.sql.DataSource;
 
@@ -20,10 +19,9 @@ public class ResearchStudyDaoJdbc extends AbstractResourceDaoJdbc<ResearchStudy>
 	{
 		super(dataSource, permanentDeleteDataSource, fhirContext, ResearchStudy.class, "research_studies",
 				"research_study", "research_study_id", ResearchStudyIdentityFilter::new,
-				Arrays.asList(
-						factory(ResearchStudyEnrollment.PARAMETER_NAME, ResearchStudyEnrollment::new,
-								ResearchStudyEnrollment.getNameModifiers(), ResearchStudyEnrollment::new,
-								ResearchStudyEnrollment.getIncludeParameterValues()),
+				List.of(factory(ResearchStudyEnrollment.PARAMETER_NAME, ResearchStudyEnrollment::new,
+						ResearchStudyEnrollment.getNameModifiers(), ResearchStudyEnrollment::new,
+						ResearchStudyEnrollment.getIncludeParameterValues()),
 						factory(ResearchStudyIdentifier.PARAMETER_NAME, ResearchStudyIdentifier::new,
 								ResearchStudyIdentifier.getNameModifiers()),
 						factory(ResearchStudyPrincipalInvestigator.PARAMETER_NAME,
@@ -31,7 +29,7 @@ public class ResearchStudyDaoJdbc extends AbstractResourceDaoJdbc<ResearchStudy>
 								ResearchStudyPrincipalInvestigator.getNameModifiers(),
 								ResearchStudyPrincipalInvestigator::new,
 								ResearchStudyPrincipalInvestigator.getIncludeParameterValues())),
-				Collections.emptyList());
+				List.of());
 	}
 
 	@Override
